--- a/PerigosoOuNao.ipynb
+++ b/PerigosoOuNao.ipynb
@@ -56,13 +56,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 29,
       "metadata": {
         "id": "Z-V29r491cqw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e4ce872a-b6d9-4112-ef42-b3e81816b7f6"
+        "outputId": "b2f8918c-3962-4df0-9d60-bdb9c4119845"
       },
       "outputs": [
         {
@@ -101,8 +101,10 @@
         }
       ],
       "source": [
+        "#Instalação do \"google.generativeai\"\n",
         "!pip install google.generativeai\n",
         "\n",
+        "#Importações\n",
         "import google.generativeai as genai\n",
         "import textwrap\n",
         "from IPython.display import display\n",
@@ -122,13 +124,14 @@
     {
       "cell_type": "code",
       "source": [
-        "GOOGLE_API_KEY=userdata.get(\"SECRET_KEY\")\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "#Configuração da gerador IA\n",
+        "GOOGLE_API_KEY=userdata.get(\"SECRET_KEY\") #SUBSTITUA O \"SECRET_KEY\" PELA SUA API KEY DO GOOGLE AI STUDIO\n",
+        "genai.configure(api_key=GOOGLE_API_KEY) #Configuração do gerador IA com a API KEY"
       ],
       "metadata": {
         "id": "Clylb0KL1n_5"
       },
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -143,10 +146,13 @@
     {
       "cell_type": "code",
       "source": [
+        "#Configurações de Geração\n",
         "generation_config = {\n",
         "  \"candidate_count\": 1,\n",
         "  \"temperature\": 0.1,\n",
         "}\n",
+        "\n",
+        "#Configurações de Segurança\n",
         "safety_settings={\n",
         "    'HATE': 'BLOCK_MEDIUM_AND_ABOVE',\n",
         "    'HARASSMENT': 'BLOCK_MEDIUM_AND_ABOVE',\n",
@@ -157,7 +163,7 @@
       "metadata": {
         "id": "MV6JUCRR1rNg"
       },
-      "execution_count": 22,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -172,16 +178,18 @@
     {
       "cell_type": "code",
       "source": [
+        "#Criação do modelo AI\n",
         "model = genai.GenerativeModel(model_name='gemini-1.0-pro',\n",
         "                                  generation_config=generation_config,\n",
         "                                  safety_settings=safety_settings,)\n",
         "\n",
+        "#Criação do ChatBOT AI\n",
         "chat = model.start_chat(history=[])"
       ],
       "metadata": {
         "id": "jWVI397G1vvD"
       },
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -196,6 +204,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Predefinições do ChatBOT, contextualizando ele em seu contexto de operação\n",
         "chat.send_message(\"Você é ChatBOT projetado para analisar interações medicamentosas e fornecer informações gerais\")\n",
         "chat.send_message(\"Você não deve responder e nem fornecer opiniões, crenças pessoais ou discussões\")\n",
         "chat.send_message(\"Suas respostas devem ser sempre precisas e científicas\")"
@@ -203,12 +212,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 225
+          "height": 208
         },
         "id": "RB_-ker41wdN",
-        "outputId": "00c262cc-805a-4bb0-a87f-7006173ffe09"
+        "outputId": "f1f07e96-dfda-4024-abcc-5ae633416be9"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,12 +227,12 @@
               "GenerateContentResponse(\n",
               "    done=True,\n",
               "    iterator=None,\n",
-              "    result=glm.GenerateContentResponse({'candidates': [{'content': {'parts': [{'text': 'Entendo. Minhas respostas devem ser sempre precisas e científicas. Vou tentar o meu melhor para seguir esta instrução. No entanto, se você me fizer uma pergunta sobre um tópico que não conheço bem, tentarei fornecer uma resposta que seja o mais precisa e científica possível, com base nas informações disponíveis para mim. Além disso, tentarei citar minhas fontes sempre que possível.'}], 'role': 'model'}, 'finish_reason': 1, 'index': 0, 'safety_ratings': [{'category': 9, 'probability': 1, 'blocked': False}, {'category': 8, 'probability': 1, 'blocked': False}, {'category': 7, 'probability': 1, 'blocked': False}, {'category': 10, 'probability': 1, 'blocked': False}], 'token_count': 0, 'grounding_attributions': []}]}),\n",
+              "    result=glm.GenerateContentResponse({'candidates': [{'content': {'parts': [{'text': 'Você está correto. Minhas respostas devem ser sempre precisas e científicas. Baseio minhas respostas em informações de fontes confiáveis, como artigos científicos revisados por pares, bancos de dados médicos e diretrizes de organizações de saúde respeitadas. Estou constantemente aprendendo e atualizando meu conhecimento para garantir que as informações que forneço sejam precisas e atualizadas. Se você tiver alguma dúvida sobre a precisão das minhas respostas, sinta-se à vontade para perguntar e fornecerei as fontes das informações que usei.'}], 'role': 'model'}, 'finish_reason': 1, 'index': 0, 'safety_ratings': [{'category': 9, 'probability': 1, 'blocked': False}, {'category': 8, 'probability': 1, 'blocked': False}, {'category': 7, 'probability': 1, 'blocked': False}, {'category': 10, 'probability': 1, 'blocked': False}], 'token_count': 0, 'grounding_attributions': []}]}),\n",
               ")"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 33
         }
       ]
     },
@@ -239,6 +248,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Função para a formatação das mensagens de retorno\n",
         "def to_markdown(text):\n",
         "  text = text.replace('•', '  *')\n",
         "  return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))"
@@ -246,7 +256,7 @@
       "metadata": {
         "id": "sM6b8t9T3fYg"
       },
-      "execution_count": 25,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -338,6 +348,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Prints da Aprasentação do ChatBOT, formatando com Markdown\n",
         "hello_world = \"Olá, seja bem-vindo ao **PerigosoOuNão?**\"\n",
         "explanation =\"Ele classificará a interação entre **EXTREMAMENTE PERIGOSA**, **PERIGOSA**, **MODERADA**, **LEVE** ou **NENHUMA**. Além disso,\"\n",
         "example1= \"**Exemplo citando os medicamentos:** Marevan, Fluconazol e Cloridrato de Cetoconazol\"\n",
@@ -355,44 +366,66 @@
         "display(Markdown(observation))\n",
         "print('\\n')\n",
         "\n",
+        "#Solicitação da Mensagem de Texto com o Input\n",
         "prompt = input('Cite os Medicamentos para a Pesquisa: ')\n",
-        "prompt = prompt.lower()\n",
+        "prompt = prompt.lower() #Deixa tudo minusculo para poder comparar no While\n",
         "\n",
         "while prompt != \"fim\" and prompt != \"f\" and prompt != \"\":\n",
         "  message1 = \"Guarde a mensagem a seguir: \" + prompt\n",
-        "  chat.send_message(message1)\n",
+        "  chat.send_message(message1) #Guarda a mensagem no ChatBOT\n",
+        "\n",
+        "  #Validação para a temática\n",
         "  validation1 = chat.send_message(\"A temática desta mensagem é medicamentos? Se sim responda 'SIM', senão responda 'NAO' (sem o acento)\")\n",
         "  if validation1.text == \"SIM\":\n",
+        "\n",
+        "    #Validação para o subjetivismo do usuário\n",
         "    validation2 = chat.send_message(\"Esta mensagem é subjetiva, uma opinião ou uma crença pessoal? Se sim responda 'SIM', senão responda 'NAO' (sem o acento)\")\n",
         "    if validation2.text == \"NAO\":\n",
+        "\n",
+        "      #Validação para uma pergunta subjetiva\n",
         "      validation6 = chat.send_message(\"Esta mensagem é uma pergunta de caráter pessoal ou subjetivo? Se sim responda 'SIM', senão responda 'NAO' (sem o acento)\")\n",
         "      if validation6.text == \"NAO\":\n",
+        "\n",
+        "        #Validação para verificar se há medicamentos no input\n",
         "        validation3 = chat.send_message(\"Nesta mensagem há nome(s) de remédio(s)? Se sim responda 'SIM', senão responda 'NAO' (sem o acento)\")\n",
         "        if validation3.text == \"SIM\":\n",
+        "\n",
+        "          #Validação para verificar o formato da pergunta\n",
         "          validation4 = chat.send_message(\"Esta mensagem é uma enumeração de medicamentos ou uma pergunta sobre a interação de determinados medicamentos? Se sim responda 'SIM', senão responda 'NAO' (sem o acento)\")\n",
         "          if validation4.text == \"SIM\":\n",
+        "\n",
+        "            #Validação para verificar a quantidade de medicamentos no input\n",
         "            validation5 = chat.send_message(\"Nesta interação há apenas um medicamento citado? Se sim responda 'SIM', senão responda 'NAO' (sem o acento)\")\n",
         "            if validation5.text == \"NAO\":\n",
+        "\n",
+        "              #Construção da resposta do ChatBOT\n",
         "              chat.send_message(\"Analise os efeitos colaterais da ingestão simultânea destes medicamentos, bem como sua periculosidade e gravidade\")\n",
         "              classification = chat.send_message(\"Classifique esta interação em 'INTERAÇÃO EXTREMAMENTE PERIGOSA', 'INTEREÇÃO PERIGOSA', 'INTERAÇÃO MODERADA', 'INTERAÇÃO LEVE' ou 'NENHUMA INTERAÇÃO'.\")\n",
-        "\n",
         "              describe = chat.send_message(\"Escreva 'MEDICAMENTOS' linhas e, logo abaixo, faça uma descrição de cada medicamento, informando o seu componente ativo, seus efeitos e para que serve seu uso.\")\n",
         "              side_effects = chat.send_message(\"Escreva 'EFEITOS COLATERAIS' e, logo abaixo, explique quais são os efeitos desta interação medicamentosa, apontando como ocorre esta interação, os efeitos desta interação e o riscos desta interação\")\n",
         "              groups = chat.send_message(\"Escreva 'GRUPOS DE RISCO' e, logo abaixo, cite quais são os grupos de risco para esta interação\")\n",
         "              recommendation = chat.send_message (\"Escreva 'AVISO IMPORTANTE' e, logo abaixo, faça um breve comentário sobre os perigos da automedicação e sugerindo que um médico deve ser consultado \")\n",
+        "\n",
+        "              #Armazenamento das respostas em uma variavel para formatação futura\n",
         "              response = []\n",
         "              response.append(classification)\n",
         "              response.append(describe)\n",
         "              response.append(side_effects)\n",
         "              response.append(groups)\n",
         "              response.append(recommendation)\n",
+        "\n",
+        "              #Prints da resposta\n",
         "              print('\\n')\n",
         "              print('--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------')\n",
+        "\n",
+        "              #Print formatado das respostas\n",
         "              for message in response:\n",
         "                display(to_markdown(message.text))\n",
         "                print('\\n')\n",
         "              print('--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------')\n",
         "              print(\"\\n\")\n",
+        "\n",
+        "            #Quando cai no else é dado uma resposta ao usuário explicando a situação\n",
         "            else:\n",
         "              response = []\n",
         "              response.append(chat.send_message(\"Escreva uma mensagem dizendo é necessário no mínimo dois medicamentos para serem analisados\"))\n",
@@ -435,9 +468,12 @@
         "    for message in response:\n",
         "      display(to_markdown(message.text))\n",
         "      print('\\n')\n",
+        "\n",
+        "  #Solicitação de Nova Pergunta\n",
         "  prompt = input('Cite os Medicamentos para a Pesquisa: ')\n",
         "  prompt = prompt.lower()\n",
         "\n",
+        "#Print de agradecimento\n",
         "print(\"\\n\")\n",
         "thanks = \"Obrigado por usar o **ChatBOT  'PerigosoOuNão?'**\"\n",
         "display(Markdown(thanks))"
@@ -448,9 +484,9 @@
           "height": 1000
         },
         "id": "XYFAR_i_1zNI",
-        "outputId": "52357ff6-3658-46a8-ac42-d226a473b4a6"
+        "outputId": "a8e1b6ae-d5e6-4569-d66d-3cc74a65a5f9"
       },
-      "execution_count": 26,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +600,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> **MEDICAMENTOS**\n> \n> **Marevan (varfarina)**\n> \n> * **Componente ativo:** Varfarina\n> * **Efeitos:** Anticoagulante que inibe a coagulação do sangue\n> * **Usos:** Prevenção e tratamento de coágulos sanguíneos, como trombose venosa profunda (TVP) e embolia pulmonar (EP)\n> \n> **Fluconazol**\n> \n> * **Componente ativo:** Fluconazol\n> * **Efeitos:** Antifúngico que inibe o crescimento de fungos\n> * **Usos:** Tratamento de infecções fúngicas, como candidíase e infecções fúngicas invasivas\n> \n> **Cloridrato de Cetoconazol**\n> \n> * **Componente ativo:** Cetoconazol\n> * **Efeitos:** Antifúngico que inibe o crescimento de fungos\n> * **Usos:** Tratamento de infecções fúngicas, como pé de atleta, micose e infecções fúngicas sistêmicas"
+            "text/markdown": "> **MEDICAMENTOS**\n> \n> **Marevan**\n> \n> * **Componente ativo:** Varfarina\n> * **Efeitos:** Anticoagulante\n> * **Usos:** Prevenção e tratamento de coágulos sanguíneos\n> \n> **Fluconazol**\n> \n> * **Componente ativo:** Fluconazol\n> * **Efeitos:** Antifúngico\n> * **Usos:** Tratamento de infecções fúngicas\n> \n> **Cloridrato de cetoconazol**\n> \n> * **Componente ativo:** Cetoconazol\n> * **Efeitos:** Antifúngico\n> * **Usos:** Tratamento de infecções fúngicas"
           },
           "metadata": {}
         },
@@ -582,7 +618,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> **EFEITOS COLATERAIS**\n> \n> **Como ocorre a interação:**\n> \n> Fluconazol e cloridrato de cetoconazol inibem o metabolismo de Marevan no fígado, o que leva ao aumento dos níveis de Marevan no sangue.\n> \n> **Efeitos desta interação:**\n> \n> * Aumento do risco de sangramento\n> * Hemorragia grave (com risco de vida)\n> \n> **Riscos desta interação:**\n> \n> A ingestão simultânea de Marevan, Fluconazol e Cloridrato de Cetoconazol pode ser perigosa e potencialmente fatal. O risco de sangramento é particularmente grave, pois pode levar a hemorragias internas ou externas com risco de vida.\n> \n> **Gerenciamento:**\n> \n> * Monitore os níveis de INR de perto durante o tratamento com esses medicamentos.\n> * Ajuste a dose de Marevan conforme necessário para manter os níveis de INR dentro da faixa terapêutica.\n> * Considere o uso de um anticoagulante alternativo se o Fluconazol ou o Cloridrato de Cetoconazol não puderem ser evitados.\n> * Procure atendimento médico imediatamente se sentir algum efeito colateral grave, como sangramento incomum ou erupção cutânea grave."
+            "text/markdown": "> **EFEITOS COLATERAIS**\n> \n> **Como ocorre a interação:**\n> \n> * O fluconazol e o cetoconazol são inibidores potentes do CYP2C9, uma enzima hepática que metaboliza o marevan.\n> * A inibição do CYP2C9 pelo fluconazol ou cetoconazol pode levar ao aumento dos níveis plasmáticos de marevan, aumentando o risco de sangramento.\n> \n> **Efeitos desta interação:**\n> \n> * Aumento do risco de sangramento\n> * Hematomas\n> * Sangue no nariz ou gengivas\n> * Sangue na urina ou fezes\n> \n> **Riscos desta interação:**\n> \n> * Hemorragia grave\n> * Hemorragia intracraniana (sangramento no cérebro)\n> * Morte\n> \n> **Gestão:**\n> \n> * Monitore cuidadosamente o tempo de protrombina (TP) ou o índice internacional normalizado (INR) ao iniciar, interromper ou alterar a dose de fluconazol ou cetoconazol em pacientes que tomam marevan.\n> * Ajuste a dose de marevan conforme necessário para manter o TP ou INR dentro da faixa terapêutica.\n> * Considere o uso de um anticoagulante alternativo que não seja metabolizado pelo CYP2C9, como a varfarina.\n> \n> **Referências:**\n> \n> * [Micromedex Healthcare Series](https://micromedexsolutions.com/)\n> * [Lexi-Comp Online](https://online.lexi.com/)\n> * [UpToDate](https://www.uptodate.com/)"
           },
           "metadata": {}
         },
@@ -600,7 +636,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> **GRUPOS DE RISCO**\n> \n> Os seguintes grupos de pessoas têm maior risco de desenvolver efeitos colaterais graves desta interação medicamentosa:\n> \n> * Pessoas que tomam Marevan para prevenir ou tratar coágulos sanguíneos\n> * Pessoas com histórico de sangramento ou distúrbios hemorrágicos\n> * Pessoas com doença hepática\n> * Pessoas idosas\n> * Pessoas que tomam outros medicamentos que podem aumentar o risco de sangramento, como aspirina ou anti-inflamatórios não esteroides (AINEs)"
+            "text/markdown": "> **GRUPOS DE RISCO**\n> \n> Os seguintes grupos de pacientes têm maior risco de sangramento com a interação entre marevan, fluconazol e cloridrato de cetoconazol:\n> \n> * Pacientes que tomam altas doses de marevan\n> * Pacientes com doença hepática ou renal\n> * Pacientes com histórico de sangramento\n> * Pacientes que tomam outros medicamentos que aumentam o risco de sangramento, como aspirina ou anti-inflamatórios não esteroides (AINEs)\n> \n> É importante observar que todos os pacientes que tomam marevan com fluconazol ou cetoconazol têm risco aumentado de sangramento, independentemente da idade ou de outros fatores de risco."
           },
           "metadata": {}
         },
@@ -618,7 +654,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> **AVISO IMPORTANTE**\n> \n> A automedicação pode ser perigosa. A interação medicamentosa descrita nesta conversa pode ser grave e potencialmente fatal. Nunca tome medicamentos sem consultar um médico ou farmacêutico. Se você estiver tomando Marevan, Fluconazol ou Cloridrato de Cetoconazol, é importante informar seu médico sobre todos os outros medicamentos que você está tomando. Seu médico pode monitorar seus níveis de INR e ajustar sua dose de Marevan conforme necessário para minimizar o risco de sangramento."
+            "text/markdown": "> **AVISO IMPORTANTE**\n> \n> A automedicação pode ser perigosa. Os medicamentos só devem ser tomados sob orientação de um profissional de saúde qualificado.\n> \n> A interação entre marevan, fluconazol e cloridrato de cetoconazol pode ser grave e potencialmente fatal. É essencial consultar um médico antes de tomar qualquer medicamento, especialmente se você estiver tomando marevan ou outros anticoagulantes.\n> \n> Um médico pode avaliar seu risco individual de sangramento e tomar as medidas adequadas para prevenir ou gerenciar quaisquer interações medicamentosas."
           },
           "metadata": {}
         },
